--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,68 @@
 baseURL = 'https://guyjames.com/'
 languageCode = 'en-gb'
 title = 'Guy James'
-theme = "hyde"
+copyright = "© {year}"
+#theme = "hyde"
+theme = "hugo-theme-codex"
 
+# Add your Disqus shortname here.
+# disqusShortname = ""
+
+# Add your Google Analytics identifier: UA-XXXXXXXX-X
+# googleAnalytics = "" 
+
+# Optional params
 [params]
+  description = "Creating upward spirals. Web3, GameB, P2P, collapse, regenerative cultures, psychedelics, meditation, and music."
+  # Follow the Hugo date/time format reference here: 
+  # https://gohugo.io/functions/format/#gos-layout-string
+  dateFormat = "Jan 2 2006"
 
-description = "Creating upward spirals. Web3, GameB, P2P, collapse, regenerative cultures, psychedelics, meditation, and music."
+  # Links to your social accounts, comment/uncomment as needed. Icons will be displayed for those specified.
+  twitter = "https://twitter.com/guyjames23"
+  github = "https://github.com/guyjames"
+  email = "mailto:info@guyjames.com"
+  mastodon = "https://social.coop/@guyjames"
+  ghost = "https://ghost.guyjames.com"
+  # facebook = "https://facebook.com/<your handle>"
+  # gitlab = "https://gitlab.com/<your handle>"
+  # instagram = "https://instagram.com/<your handle>"
+  # linkedin = "<link to your profile>"
+  # youtube = "https://www.youtube.com/channel/<your channel>"
+  
+  # Titles for your icons (shown as tooltips), and also their display order.
+  # Currently, these icons are supported: 
+  #   "Twitter", "GitHub", "Email", "Mastodon", "Facebook", "GitLab", "Instagram", "LinkedIn", "YouTube"
+  iconOrder = ["Twitter", "Email", "Ghost", "GitHub", "Mastodon"]
 
+  # Metadata for Twitter cards, defaults to params.twitter
+  twitterSite = "@guyjames23"
+  twitterAuthor = "@guyjames23"
+
+  # Set to true to display page title in table of contents in blog posts.
+  showPageTitleInTOC = false
+
+# This disables Hugo's default syntax highlighting in favor
+# of prismjs. If you wish to use Hugo's default syntax highlighting
+# over prismjs, remove this. You will also need to remove the prismjs
+# vendor script in layouts/blog/single.html.
+[markup]
+  [markup.highlight]
+    codeFences = false
+    
+  # Set to false to disallow raw HTML in markdown files
+  [markup.goldmark.renderer]
+      unsafe = true
+
+# Controls the navigation
+[[menu.main]]
+  identifier = "home"
+  name = "Home"
+  title = "home"
+  url = "/"
+
+[[menu.main]]
+  identifier = "blog"
+  name = "Blog"
+  title = "Blog"
+  url = "/posts"
