--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,7 @@ theme = "hugo-theme-codex"
   email = "mailto:info@guyjames.com"
   mastodon = "https://social.coop/@guyjames"
   ghost = "https://ghost.guyjames.com"
+  rss = "https://guyjames.com/index.xml"
   # facebook = "https://facebook.com/<your handle>"
   # gitlab = "https://gitlab.com/<your handle>"
   # instagram = "https://instagram.com/<your handle>"
@@ -33,7 +34,7 @@ theme = "hugo-theme-codex"
   # Titles for your icons (shown as tooltips), and also their display order.
   # Currently, these icons are supported: 
   #   "Twitter", "GitHub", "Email", "Mastodon", "Facebook", "GitLab", "Instagram", "LinkedIn", "YouTube"
-  iconOrder = ["Twitter", "Email", "Ghost", "GitHub", "Mastodon"]
+  iconOrder = ["Twitter", "Email", "RSS", "Ghost", "GitHub", "Mastodon"]
 
   # Metadata for Twitter cards, defaults to params.twitter
   twitterSite = "@guyjames23"
