--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ theme = "hugo-theme-codex"
   # Titles for your icons (shown as tooltips), and also their display order.
   # Currently, these icons are supported: 
   #   "Twitter", "GitHub", "Email", "Mastodon", "Facebook", "GitLab", "Instagram", "LinkedIn", "YouTube"
-  iconOrder = ["Email", "RSS", "Ghost", "Twitter", "YouTube", "GitHub", "Mastodon"]
+  iconOrder = ["Email", "RSS", "Ghost", "Mastodon", "YouTube", "Twitter"]
 
   # Metadata for Twitter cards, defaults to params.twitter
   twitterSite = "@guyjames23"
