--- a/config.toml
+++ b/config.toml
@@ -30,13 +30,13 @@ theme = "hugo-theme-codex"
   # facebook = "https://facebook.com/<your handle>"
   # gitlab = "https://gitlab.com/<your handle>"
   # instagram = "https://instagram.com/<your handle>"
-  # linkedin = "<link to your profile>"
+  linkedin = "https://www.linkedin.com/in/guy-james-212383276/"
   # youtube = "https://www.youtube.com/channel/<your channel>"
 
   # Titles for your icons (shown as tooltips), and also their display order.
   # Currently, these icons are supported: 
   #   "Twitter", "GitHub", "Email", "Mastodon", "Facebook", "GitLab", "Instagram", "LinkedIn", "YouTube"
-  iconOrder = ["Email", "RSS", "Ghost", "Mastodon", "YouTube", "Twitter"]
+  iconOrder = ["Email", "RSS", "Ghost", "Mastodon", "YouTube", "Twitter", "LinkedIn"]
 
   # Metadata for Twitter cards, defaults to params.twitter
   twitterSite = "@guyjames23"
